[gd_scene load_steps=8 format=3 uid="uid://cs60rlbsibn7i"]

[ext_resource type="PackedScene" uid="uid://ca0rlgrx3lxl4" path="res://scenes/modos/infinite_building/tower_zone.tscn" id="1_3ltmi"]
[ext_resource type="Script" path="res://scenes/modos/infinite_building/mundo.gd" id="1_br12v"]
[ext_resource type="PackedScene" uid="uid://oa3urvdc3d4y" path="res://boxes/box1.tscn" id="3_c360v"]
[ext_resource type="PackedScene" uid="uid://cxcmjltebk1ml" path="res://scenes/helicoptero/helicopter_body_2.tscn" id="5_5y0yr"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1cnwx"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_a3auf"]
normal = Vector2(1, 0)
distance = -456.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fro6q"]
normal = Vector2(-0.999985, -0.00555547)
distance = 168.397

[node name="Mundo" type="Node2D"]
position = Vector2(456, -600)
script = ExtResource("1_br12v")

[node name="Vaina" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Vaina"]
offset_right = 1152.0
offset_bottom = 648.0

[node name="Button" type="Button" parent="Vaina"]
offset_left = 35.0
offset_top = 470.0
offset_right = 390.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 59
text = "De nuevo"

[node name="Button2" type="Button" parent="Vaina"]
offset_left = 733.0
offset_top = 470.0
offset_right = 1088.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 59
text = "Menu"

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score2" type="Label" parent="UI"]
offset_left = 32.0
offset_right = 345.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "WR: 25 m"
horizontal_alignment = 2

[node name="Score" type="Label" parent="UI"]
offset_left = 872.0
offset_right = 1151.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "0 m"
horizontal_alignment = 2

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -456.0
offset_top = -57424.0
offset_right = 984.0
offset_bottom = 592.0
color = Color(0.72365, 0.81495, 1, 1)

[node name="Tower Zone" parent="." instance=ExtResource("1_3ltmi")]
position = Vector2(576, 592)

[node name="Limits" type="StaticBody2D" parent="."]
position = Vector2(578, 596)
collision_mask = 7

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Limits"]
position = Vector2(-2, -4)
shape = SubResource("WorldBoundaryShape2D_1cnwx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits"]
position = Vector2(-578, -284)
shape = SubResource("WorldBoundaryShape2D_a3auf")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Limits"]
position = Vector2(574, -236)
shape = SubResource("WorldBoundaryShape2D_fro6q")

[node name="Spawner" type="Marker2D" parent="."]
position = Vector2(-344, 32)

[node name="Box" parent="Spawner" instance=ExtResource("3_c360v")]
position = Vector2(680, 488)

[node name="HelicopterBody2" parent="." instance=ExtResource("5_5y0yr")]
position = Vector2(24, 184)

[node name="Camera2D" type="Camera2D" parent="HelicopterBody2"]
zoom = Vector2(0.5, 0.5)

[connection signal="pressed" from="Vaina/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Vaina/Button2" to="." method="_on_button_2_pressed"]
[connection signal="nueva_mejor_altura" from="Tower Zone" to="." method="_on_tower_zone_nueva_mejor_altura"]
